--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="t4">
-                <img src= "Images/_ (2).jpeg" alt="Ethan">
+                <img src= "Images/ethan.jpeg" alt="Ethan">
                 <h3>Instructor, Ethan Hayes</h3><br>
                 <p>
                     Ethan Hayes brings a wealth of knowledge and passion for ballet and pointe to The Dance Lab. With a background in classical training from prestigious ballet academies, Ethan has danced with several ballet companies around the world. His approach is structured and disciplined, but always with a focus on building confidence and artistry. Whether guiding beginners through basic positions or working with advanced students on intricate movements, Ethan’s patience and attention to detail inspire dancers to reach their fullest potential.
